<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   tools:context="com.tbgosalvez.southhills.BillingInfoActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"    >

    <TextView
        android:id="@+id/tv_disp_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="hi"
        android:textAlignment="textStart"
        android:textSize="16dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/iv_billing_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_stop_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop_music" />

        <Button
            android:id="@+id/btn_selection_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_go_back_to_main"
            android:textAllCaps="false" />
    </LinearLayout>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_pmt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pmt_info" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fname" />

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lname" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="City" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="State"
            android:maxLength="2" />

        <EditText
            android:id="@+id/et_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Zip Code"
            android:inputType="number"
            android:maxLength="5" />

        <Spinner
            android:id="@+id/spn_pmt_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_send_order"
        android:layout_width="165dp"
        android:layout_height="71dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/yen"
        android:text="@string/btn_send_data"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/white" />


</LinearLayout>

 </ScrollView>
